tests/baselines/reference/subclassThisTypeAssignable01.errors.txt
file1.js(2,7): error TS2322: Type 'C' is not assignable to type 'ClassComponent<any>'.
  Index signature for type 'number' is missing in type 'C'.
tile1.ts(2,30): error TS2344: Type 'State' does not satisfy the constraint 'Lifecycle<Attrs, State>'.
tile1.ts(6,81): error TS2744: Type parameter defaults can only reference previously declared type parameters.
tile1.ts(11,40): error TS2344: Type 'State' does not satisfy the constraint 'Lifecycle<Attrs, State>'.
tile1.ts(21,2): error TS2416: Property 'view' in type 'C' is not assignable to the same property in base type 'ClassComponent<MyAttrs>'.
  Type '(v: Vnode<MyAttrs, Lifecycle<MyAttrs, any>>) => number' is not assignable to type '(vnode: Vnode<MyAttrs, this>) => number'.
    Types of parameters 'v' and 'vnode' are incompatible.
      Type 'Vnode<MyAttrs, this>' is not assignable to type 'Vnode<MyAttrs, Lifecycle<MyAttrs, any>>'.
        Type 'this' is not assignable to type 'Lifecycle<MyAttrs, any>'.
          Type 'C' is not assignable to type 'Lifecycle<MyAttrs, any>'.
            Index signature for type 'number' is missing in type 'C'.
tile1.ts(24,7): error TS2322: Type 'C' is not assignable to type 'ClassComponent<any>'.
  Index signature for type 'number' is missing in type 'C'.


==== tile1.ts (5 errors) ====
    interface Lifecycle<Attrs, State> {
    	oninit?(vnode: Vnode<Attrs, State>): number;
    	                            ~~~~~
!!! error TS2344: Type 'State' does not satisfy the constraint 'Lifecycle<Attrs, State>'.
!!! related TS2208 tile1.ts:1:28: This type parameter might need an `extends Lifecycle<Attrs, State>` constraint.
    	[_: number]: any;
    }
    
    interface Vnode<Attrs, State extends Lifecycle<Attrs, State> = Lifecycle<Attrs, State>> {
                                                                                    ~~~~~
!!! error TS2744: Type parameter defaults can only reference previously declared type parameters.
    	tag: Component<Attrs, State>;
    }
    
    interface Component<Attrs, State> {
    	view(this: State, vnode: Vnode<Attrs, State>): number;
    	                                      ~~~~~
!!! error TS2344: Type 'State' does not satisfy the constraint 'Lifecycle<Attrs, State>'.
!!! related TS2208 tile1.ts:10:28: This type parameter might need an `extends Lifecycle<Attrs, State>` constraint.
    }
    
    interface ClassComponent<A> extends Lifecycle<A, ClassComponent<A>> {
    	oninit?(vnode: Vnode<A, this>): number;
    	view(vnode: Vnode<A, this>): number;
    }
    
    interface MyAttrs { id: number }
    class C implements ClassComponent<MyAttrs> {
    	view(v: Vnode<MyAttrs>) { return 0; }
    	~~~~
!!! error TS2416: Property 'view' in type 'C' is not assignable to the same property in base type 'ClassComponent<MyAttrs>'.
!!! error TS2416:   Type '(v: Vnode<MyAttrs, Lifecycle<MyAttrs, any>>) => number' is not assignable to type '(vnode: Vnode<MyAttrs, this>) => number'.
!!! error TS2416:     Types of parameters 'v' and 'vnode' are incompatible.
!!! error TS2416:       Type 'Vnode<MyAttrs, this>' is not assignable to type 'Vnode<MyAttrs, Lifecycle<MyAttrs, any>>'.
!!! error TS2416:         Type 'this' is not assignable to type 'Lifecycle<MyAttrs, any>'.
!!! error TS2416:           Type 'C' is not assignable to type 'Lifecycle<MyAttrs, any>'.
!!! error TS2416:             Index signature for type 'number' is missing in type 'C'.
    }
    
    const test8: ClassComponent<any> = new C();
          ~~~~~
!!! error TS2322: Type 'C' is not assignable to type 'ClassComponent<any>'.
!!! error TS2322:   Index signature for type 'number' is missing in type 'C'.
==== file1.js (1 errors) ====
    /** @type {ClassComponent<any>} */
    const test9 = new C();
          ~~~~~
!!! error TS2322: Type 'C' is not assignable to type 'ClassComponent<any>'.
!!! error TS2322:   Index signature for type 'number' is missing in type 'C'.
    